<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tkkim.whereisit.add_stuff.AddStuff">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/ivStuImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_basic"
                android:adjustViewBounds="true"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_android_black_24dp" />

            <Button
                android:id="@+id/btnImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_upload_img" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btnChoice"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_choice_loc" />

                <TextView
                    android:id="@+id/tvSelectedLoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:maxLength="15"
                    android:textSize="@dimen/text_maintitle" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etStuName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_basic"
                    android:hint="@string/hint_stu_name"
                    android:inputType="textPersonName"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColorHint="@color/colorHint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etStuComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_basic"
                    android:hint="@string/hint_stu_comment"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    android:textColorHint="@color/colorHint" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btnInsert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_insert" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
