<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tkkim.whereisit.add_location.AddLocation">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_linearlayout"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/ivLocImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_basic"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_android_black_24dp" />


            <Button
                android:id="@+id/btnImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_upload_img" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etLocName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_basic"
                    android:hint="@string/hint_loc_name"
                    android:inputType="textPersonName"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColorHint="@color/colorHint" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etLocComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_basic"
                    android:hint="@string/hint_loc_comment"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    android:textColorHint="@color/colorHint" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btnInsert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_insert" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
